// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScriptAttr(Type) should override script type from config: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	  return {};
+/******/ 	  mode = mode || 'load';
+/******/
+/******/ 	  var result = {};
+/******/
+/******/ 	  (function() {
+/******/ 	    result.type = 'module';
+/******/ 	  })();
+/******/
+/******/ 	  return result;
"
`;

exports[`ScriptAttr(Type) should override script type from options: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	  return {};
+/******/ 	  mode = mode || 'load';
+/******/
+/******/ 	  var result = {};
+/******/
+/******/ 	  (function() {
+/******/ 	    result.type = 'application/json';
+/******/ 	  })();
+/******/
+/******/ 	  return result;
"
`;
